[package]
name = "path_drawing"
version = "0.1.0"
authors = ["Roman Petrenko <roman@canva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { git = "https://github.com/StewartCanva/rust-skia", rev = "9fa27cfdd1ef1f998bcc209ea29339e4ba6fb2a7", features = ["textlayout"] }
#skia-safe = { path = "/Users/romanpetrenko/workspace/rust-skia/skia-safe", features = ["textlayout"] }
#skia-safe = { version = "0.45.1", features = ["textlayout"] }
#skia-safe = { git = "https://github.com/rust-skia/rust-skia", branch = "master", features = ["textlayout"] }
png = "0.16.8"