[package]
name = "path_drawing"
version = "0.1.0"
authors = ["Roman Petrenko <roman@canva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { git = "https://github.com/StewartCanva/rust-skia", rev = "0b9f79d08c82d38e133cc45b943f721f67820884", features = ["textlayout"] }
#skia-safe = { path = "/Users/romanpetrenko/work/rust-skia/skia-safe", features = ["textlayout"] }
#skia-safe = { version = "0.53.0", features = ["textlayout"] }
#skia-safe = { git = "https://github.com/rust-skia/rust-skia", branch = "master", features = ["textlayout"] }
png = "0.16.8"